build: add jvm options for l4j